Minor edits, re-run examples for new style

--- a/systems_time_domain/convolution.ipynb
+++ b/systems_time_domain/convolution.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Convolution\n",
     "\n",
-    "The convolution is an important operation in the theory of signals and systems, as shown in the previous Section. It also shows up in a wide range of other physics and mathematical problems. The operation is therefore of general interest and well known in mathematics. The properties of the convolution are reviewed, followed by a widely used graphical interpretation of the operation.\n",
+    "As shown in the previous Section, the convolution is an important operation in the theory of signals and systems. It also shows up in a wide range of other physical and mathematical problems. The [convolution operation](https://en.wikipedia.org/wiki/Convolution) is therefore of general interest and well known. The properties of the convolution are reviewed, followed by a widely used graphical interpretation of the operation.\n",
     "\n",
     "The convolution of two signals $s(t)$ and $g(t)$ is defined as\n",
     "\n",
@@ -26,7 +26,7 @@
     "\\int_{-\\infty}^{\\infty} s(t - \\tau) \\cdot g(\\tau) \\; d\\tau\n",
     "\\end{equation}\n",
     "\n",
-    "where $*$ is a common short-hand notation of the convolution. "
+    "where $*$ is a common short-hand notation of the convolution."
    ]
   },
   {
@@ -67,7 +67,7 @@
     "    \\frac{d}{dt} \\left[ s(t) * g(t) \\right] =  \\frac{d s(t)}{dt} * g(t) = s(t) * \\frac{d g(t)}{dt}\n",
     "    \\end{equation}\n",
     "\n",
-    "The first property is a consequence of the sifting property of the Dirac pulse, the second to fifth property can be proven by considering the definition of the convolution integral and the sixth property follows from the properties of the derivative of the Dirac delta function."
+    "The first property is a consequence of the sifting property of the Dirac pulse, the second to fifth property can be proven by considering the convolution integral and the sixth property follows from the properties of the derivative of the Dirac delta function."
    ]
   },
   {
@@ -91,7 +91,7 @@
     "\n",
     "3. shift $h(-\\tau)$ by $t$ to the right to yield $h(t - \\tau)$,\n",
     "\n",
-    "4. shift $h(t - \\tau)$ for $t = -\\infty \\dots \\infty$, check if it overlaps with $x(\\tau)$ and calculate the convolution integral for the overlapping sections.\n",
+    "4. shift $h(t - \\tau)$ throughout $t = -\\infty \\dots \\infty$, check if it overlaps with $x(\\tau)$ and calculate the convolution integral for the overlapping sections.\n",
     "\n",
     "The graphical interpretation of these operations is illustrated in the remainder by an example. "
    ]
@@ -102,7 +102,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "The convolution $y(t) = x(t) * h(t)$ is illustrated using the particular signals\n",
+    "The convolution $y(t) = x(t) * h(t)$ is graphically illustrated using the particular signals\n",
     "\n",
     "\\begin{align}\n",
     "h(t) &= e^{-t} \\\\\n",
@@ -118,8 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
     "\n",
     "t, tau = sym.symbols('t tau', real=True)"
@@ -145,7 +145,8 @@
    "outputs": [],
    "source": [
     "def plot_signals(x_axis, x, h, ylabel, xlabel):\n",
-    "    p1 = sym.plot(x, (x_axis, -5, 5), show=False, line_color='b', ylabel=ylabel, xlabel=xlabel)\n",
+    "    p1 = sym.plot(x, (x_axis, -5, 5), show=False,\n",
+    "                  line_color='b', ylabel=ylabel, xlabel=xlabel)\n",
     "    p2 = sym.plot(h, (x_axis, -5, 5), show=False, line_color='r')\n",
     "    p1.extend(p2)\n",
     "    p1.show()"
@@ -221,7 +222,7 @@
    "outputs": [],
    "source": [
     "h3 = h2.subs(tau, tau-t)\n",
-    "# h3 = h1.subs(tau, -tau+t)  # this handling might be more obvious\n",
+    "\n",
     "plot_signals(tau, x1, h3.subs(t, -2), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
@@ -231,9 +232,9 @@
    "source": [
     "It now becomes obvious that we have to consider three cases with respect to the overlap of $h(t-\\tau)$ and $x(\\tau)$\n",
     "\n",
-    "1. $t<0$: no overlap\n",
-    "2. $0 \\leq t < 1$: partial overlap\n",
-    "3. $t > 0$: full overlap\n",
+    "1. no overlap for $t<0$\n",
+    "2. partial overlap for $0 \\leq t < 1$\n",
+    "3. full overlap for $t > 0$\n",
     "\n",
     "The **fourth step**, the evaluation of the convolution integrals for the three cases is left open as an exercise. Note, since in the first case no overlap occurs $y(t) = 0$ for $t<0$."
    ]
