Various edits, re-run examples

--- a/systems_time_domain/network_analysis.ipynb
+++ b/systems_time_domain/network_analysis.ipynb
@@ -45,8 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
     "\n",
     "t, L, R, C = sym.symbols('t L R C', real=True)\n",
@@ -89,7 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solution_h = sym.dsolve(ode.subs(x, sym.DiracDelta(t)).subs(y, sym.Function('h')(t)))\n",
+    "solution_h = sym.dsolve(\n",
+    "    ode.subs(x, sym.DiracDelta(t)).subs(y, sym.Function('h')(t)))\n",
     "solution_h"
    ]
   },
@@ -106,7 +107,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "integration_constants = sym.solve( (solution_h.rhs.limit(t, 0, '-'), solution_h.rhs.diff(t).limit(t, 0, '-')), ['C1', 'C2'] )\n",
+    "integration_constants = sym.solve((solution_h.rhs.limit(\n",
+    "    t, 0, '-'), solution_h.rhs.diff(t).limit(t, 0, '-')), ['C1', 'C2'])\n",
     "integration_constants"
    ]
   },
@@ -140,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym.plot(h.rhs.subs(RLC), (t,0,10), ylabel=r'h(t)');"
+    "sym.plot(h.rhs.subs(RLC), (t,-1,10), ylabel=r'h(t)');"
    ]
   },
   {
@@ -160,7 +162,7 @@
    "source": [
     "tau = sym.symbols('tau', real=True)\n",
     "\n",
-    "he = sym.integrate(h.rhs.subs(RLC).subs(t,tau), (tau,0,t))\n",
+    "he = sym.integrate(h.rhs.subs(RLC).subs(t, tau), (tau, 0, t))\n",
     "he"
    ]
   },
@@ -177,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym.plot(he, (t,0,10), ylabel=r'$h_\\epsilon(t)$');"
+    "sym.plot(he, (t,-1,10), ylabel=r'$h_\\epsilon(t)$');"
    ]
   },
   {
@@ -186,7 +188,7 @@
    "source": [
     "### Transfer Function\n",
     "\n",
-    "For an exponential input signal $x(t) = e^{s t}$, the [transfer function](eigenfunctions.ipynb#Transfer-Function) $H(s)$ represents the weight of the exponential output signal $y(t) = H(s) \\cdot e^{s t}$. The transfer function is derived by introducing $x(t)$ and $y(t)$ into the ODE and solving for $H(s)$"
+    "For an exponential input signal $x(t) = e^{s t}$, the [transfer function](eigenfunctions.ipynb#Transfer-Function) $H(s)$ represents the complex weight of the exponential output signal $y(t) = H(s) \\cdot e^{s t}$. The transfer function is derived by introducing $x(t)$ and $y(t)$ into the ODE and solving for $H(s)$"
    ]
   },
   {
@@ -206,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The transfer characteristics of an LTI system for harmonic exponential signals $e^{j \\omega} = \\cos(\\omega t) + j \\sin(\\omega t)$ are of special interest in the analysis of electrical circuits. It can be derived from $H(s)$ by substituting the complex frequency $s$ by $s = j \\omega$. The resulting transfer function $H(j \\omega)$ provides the attenuation and phase the system adds to a harmonic input signal."
+    "The transfer characteristic of an LTI system for harmonic exponential signals $e^{j \\omega} = \\cos(\\omega t) + j \\sin(\\omega t)$ is of special interest for the analysis of electrical circuits. It can be derived from $H(s)$ by substituting the complex frequency $s$ by $s = j \\omega$. The resulting transfer function $H(j \\omega)$ provides the attenuation and phase the system adds to an harmonic input signal."
    ]
   },
   {
@@ -234,7 +236,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym.plot(abs(Hjw.subs(RLC)), (w, -10, 10), ylabel=r'$|H(j \\omega)|$', xlabel=r'$\\omega$');"
+    "sym.plot(abs(Hjw.subs(RLC)), (w, -10, 10),\n",
+    "         ylabel=r'$|H(j \\omega)|$', xlabel=r'$\\omega$');"
    ]
   },
   {
@@ -252,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "H2 = sym.integrate(h.rhs.subs(RLC)*sym.exp(-s*t), (t,0,sym.oo), conds='none')\n",
+    "H2 = sym.integrate(h.rhs.subs(RLC)*sym.exp(-s*t), (t, 0, sym.oo), conds='none')\n",
     "H2.simplify()"
    ]
   },
@@ -262,14 +265,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym.plot(abs(H2.subs(s, sym.I*w)), (w, -10, 10), ylabel=r'$|H(j \\omega)|$', xlabel=r'$\\omega$');"
+    "sym.plot(abs(H2.subs(s, sym.I*w)), (w, -10, 10),\n",
+    "         ylabel=r'$|H(j \\omega)|$', xlabel=r'$\\omega$');"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The phase of the transfer function $\\varphi(j \\omega) = \\arg \\{ H(j \\omega) \\}$ provides insight into the phase added to a harmonic signal when passing through the system. It is computed and plotted for the specific values of the elements given above"
+    "The phase of the transfer function $\\varphi(j \\omega) = \\arg \\{ H(j \\omega) \\}$ provides insight into the phase added to an harmonic signal when passing through the system. It is computed and plotted for the specific values of the elements given above"
    ]
   },
   {
@@ -279,7 +283,8 @@
    "outputs": [],
    "source": [
     "phi = sym.arg(Hjw)\n",
-    "sym.plot(phi.subs(RLC), (w, -10, 10), ylabel=r'$\\varphi(j \\omega)$', xlabel=r'$\\omega$');"
+    "sym.plot(phi.subs(RLC), (w, -10, 10),\n",
+    "         ylabel=r'$\\varphi(j \\omega)$', xlabel=r'$\\omega$');"
    ]
   },
   {
@@ -310,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
