Revised text, extended convolution example according to suggestions by @fs446

--- a/systems_time_domain/convolution.ipynb
+++ b/systems_time_domain/convolution.ipynb
@@ -19,11 +19,11 @@
     "\n",
     "As shown in the previous Section, the convolution is an important operation in the theory of signals and systems. It also shows up in a wide range of other physical and mathematical problems. The [convolution operation](https://en.wikipedia.org/wiki/Convolution) is therefore of general interest and well known. The properties of the convolution are reviewed, followed by a widely used graphical interpretation of the operation.\n",
     "\n",
-    "The convolution of two signals $s(t)$ and $g(t)$ is defined as\n",
+    "The convolution of two signals $x(t)$ and $h(t)$ is defined as\n",
     "\n",
     "\\begin{equation}\n",
-    "s(t) * g(t) = \\int_{-\\infty}^{\\infty} s(\\tau) \\cdot g(t - \\tau) \\; d\\tau = \n",
-    "\\int_{-\\infty}^{\\infty} s(t - \\tau) \\cdot g(\\tau) \\; d\\tau\n",
+    "(x * h)(t) = x(t) * h(t) = \\int_{-\\infty}^{\\infty} x(\\tau) \\cdot h(t - \\tau) \\; d\\tau = \n",
+    "\\int_{-\\infty}^{\\infty} x(t - \\tau) \\cdot h(\\tau) \\; d\\tau\n",
     "\\end{equation}\n",
     "\n",
     "where $*$ is a common short-hand notation of the convolution."
@@ -35,36 +35,36 @@
    "source": [
     "### Properties\n",
     "\n",
-    "For the signals $s(t)$, $g(t)$, $h(t) \\in \\mathbb{C}$ the convolution shows the following properties \n",
+    "For the signals $x(t)$, $h(t)$, $g(t) \\in \\mathbb{C}$ the convolution shows the following properties \n",
     "\n",
     "1. The Dirac impulse is the [identity element](https://en.wikipedia.org/wiki/Identity_element) of the convolution\n",
     "    \\begin{equation}\n",
-    "    s(t) * \\delta(t) = s(t)\n",
+    "    x(t) * \\delta(t) = x(t)\n",
     "    \\end{equation}\n",
     "\n",
     "2. The convolution is [commutative](https://en.wikipedia.org/wiki/Commutative_property)\n",
     "    \\begin{equation}\n",
-    "    s(t) * g(t) = g(t) * s(t)\n",
+    "    x(t) * h(t) = h(t) * x(t)\n",
     "    \\end{equation}\n",
     "\n",
     "3. The convolution is [associative](https://en.wikipedia.org/wiki/Associative_property)\n",
     "    \\begin{equation}\n",
-    "    \\left[ s(t) * g(t) \\right] * h(t) = s(t) * \\left[ g(t) * h(t) \\right] \n",
+    "    \\left[ x(t) * h(t) \\right] * g(t) = x(t) * \\left[ h(t) * g(t) \\right] \n",
     "    \\end{equation}\n",
     "\n",
     "5. The convolution is [distributive](https://en.wikipedia.org/wiki/Distributive_property)\n",
     "    \\begin{equation}\n",
-    "    s(t) * \\left[ g(t) + h(t) \\right] = s(t) * g(t) + s(t) * h(t)\n",
+    "    x(t) * \\left[ h(t) + g(t) \\right] = x(t) * h(t) + x(t) * g(t)\n",
     "    \\end{equation}\n",
     "\n",
     "5. Multiplication with a scalar $a \\in \\mathbb{C}$\n",
     "    \\begin{equation}\n",
-    "    a \\cdot \\left[ s(t) * g(t) \\right] = \\left[ a \\cdot s(t) \\right] * g(t) = s(t) * \\left[ a \\cdot g(t) \\right]\n",
+    "    a \\cdot \\left[ x(t) * h(t) \\right] = \\left[ a \\cdot x(t) \\right] * h(t) = x(t) * \\left[ a \\cdot h(t) \\right]\n",
     "    \\end{equation}\n",
     "\n",
     "6. Derivative of the convolution\n",
     "    \\begin{equation}\n",
-    "    \\frac{d}{dt} \\left[ s(t) * g(t) \\right] =  \\frac{d s(t)}{dt} * g(t) = s(t) * \\frac{d g(t)}{dt}\n",
+    "    \\frac{d}{dt} \\left[ x(t) * h(t) \\right] =  \\frac{d x(t)}{dt} * h(t) = x(t) * \\frac{d h(t)}{dt}\n",
     "    \\end{equation}\n",
     "\n",
     "The first property is a consequence of the sifting property of the Dirac pulse, the second to fifth property can be proven by considering the convolution integral and the sixth property follows from the properties of the derivative of the Dirac delta function."
@@ -203,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h2 = h1.subs(tau, -tau)\n",
+    "h2 = h.subs(t, -tau)\n",
     "\n",
     "plot_signals(tau, x1, h2, r'$h(-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The impulse response $h(-\\tau)$ is shifted by $t$ to the right in the **third step** to yield $h(t - \\tau)$. This is illustrated for $t = -2$"
+    "The impulse response $h(-\\tau)$ is shifted by $t$ to the right in the **third step** to yield $h(t - \\tau)$."
    ]
   },
   {
@@ -221,8 +221,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h3 = h2.subs(tau, tau-t)\n",
+    "h3 = h.subs(t, t-tau)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the **fourth step** it is often useful to split the calculation of the result according to the overlap between $h(t-\\tau)$ and $x(\\tau)$. For the given particular signals three different cases may be considered\n",
     "\n",
+    "1. no overlap for $t<0$,\n",
+    "2. partial overlap for $0 \\leq t < 1$, and\n",
+    "3. full overlap for $t > 0$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first case, no overlap, is illustrated for $t = -2$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot_signals(tau, x1, h3.subs(t, -2), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
@@ -230,13 +255,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It now becomes obvious that we have to consider three cases with respect to the overlap of $h(t-\\tau)$ and $x(\\tau)$\n",
+    "Form this it becomes clear that the result for the first case is given as\n",
     "\n",
-    "1. no overlap for $t<0$\n",
-    "2. partial overlap for $0 \\leq t < 1$\n",
-    "3. full overlap for $t > 0$\n",
+    "\\begin{equation}\n",
+    "y(t) = 0 \\qquad \\text{for } t < 0\n",
+    "\\end{equation}\n",
     "\n",
-    "The **fourth step**, the evaluation of the convolution integrals for the three cases is left open as an exercise. Note, since in the first case no overlap occurs $y(t) = 0$ for $t<0$."
+    "The second case, partial overlap, is illustrated for $t = \\frac{1}{2}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_signals(tau, x1, h3.subs(t, .5), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hence, for the second case the convolution integral degenerates to\n",
+    "\n",
+    "\\begin{equation}\n",
+    "y(t) = \\int_{0}^{t} e^{-(t - \\tau)} d\\tau = 1 - e^{-t} \\qquad \\text{for } 0 < t < 1\n",
+    "\\end{equation}\n",
+    "\n",
+    "The third case, full overlap, is illustrated for $t = 3$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_signals(tau, x1, h3.subs(t, 3), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the third case the convolution integral degenerates to\n",
+    "\n",
+    "\\begin{equation}\n",
+    "y(t) = \\int_{0}^{1} e^{-(t - \\tau)} d\\tau = (e - 1) e^{-t} \\qquad \\text{for } t > 1\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The overall result is composed from the three individual results. \n",
+    "\n",
+    "As alternative and in order to plot the result, the convolution integral is evaluated in `SymPy`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = sym.integrate(h.subs(t,t-tau) * x.subs(t, tau), (tau, 0, t))\n",
+    "sym.plot(y, (t,0,6), ylabel=r'$y(t)$');"
    ]
   },
   {
