convolution: alternative graphics interpretation added

--- a/systems_time_domain/convolution.ipynb
+++ b/systems_time_domain/convolution.ipynb
@@ -85,13 +85,13 @@
     "\n",
     "can be decomposed into four subsequent operations:\n",
     "\n",
-    "1. substitute $t$ by $\\tau$ in both $x(t)$ and $h(t)$,\n",
+    "* 1. substitute $t$ by $\\tau$ in both $x(t)$ and $h(t)$,\n",
     "\n",
-    "2. time-reverse $h(\\tau)$ (reflection at vertical axis),\n",
+    "* 2. time-reverse $h(\\tau)$ (mirroring at vertical axis),\n",
     "\n",
-    "3. shift $h(-\\tau)$ by $t$ to the right to yield $h(t - \\tau)$,\n",
+    "* 3. shift $h(-\\tau)$ by $t$ to the right to yield $h(t - \\tau)$,\n",
     "\n",
-    "4. shift $h(t - \\tau)$ throughout $t = -\\infty \\dots \\infty$, check if it overlaps with $x(\\tau)$ and calculate the convolution integral for the overlapping sections.\n",
+    "* 4. shift $h(t - \\tau)$ throughout $t = -\\infty \\dots \\infty$, check if it overlaps with $x(\\tau)$ and calculate the convolution integral for the overlapping sections.\n",
     "\n",
     "The graphical interpretation of these operations is illustrated in the remainder by an example. "
    ]
@@ -323,6 +323,121 @@
    "source": [
     "y = sym.integrate(h.subs(t,t-tau) * x.subs(t, tau), (tau, 0, t))\n",
     "sym.plot(y, (t,0,6), ylabel=r'$y(t)$');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Alternative Graphical Representation\n",
+    "\n",
+    "The **order** of mirroring and time shifting of $h(\\tau)$ can be **exchanged**. The algorithm is then performed with the following four steps:\n",
+    "\n",
+    "* 1. Substitute $t$ by $\\tau$ in both $x(t)$ and $h(t)$, yielding $x(\\tau)$ and $h(\\tau)$ over $\\tau$, i.e. signals are the same only defined over time variable $\\tau$.\n",
+    "\n",
+    "* 2. Shift $h(\\tau)$ by $t$ to yield $h(\\tau-t)$, **delayed** for $t>0$, **leading** for $t<0$ as discussed in the continuous signal operations notebook.\n",
+    "\n",
+    "* 3. Create $h(-(\\tau-t)) = h(t-\\tau)$, which is mirroring the signal along vertical axis at the value $t$.\n",
+    "\n",
+    "* 4. Calculate the convolution integral for all overlapping sections of $x(\\tau)$ and $h(t-\\tau)$. This yields the specific convolution result at specified $t$.\n",
+    "\n",
+    "Perform 1st to 4th step for all $t$ - at least for all $t$ where overlapping occurs in the 4th step - to obtain the full convolution result.\n",
+    "\n",
+    "The graphical interpretation of these operations is illustrated in the remainder by the same example as above.\n",
+    "\n",
+    "In the following, the impulse response $h(t)$ is illustrated by the red graph and the input signal $x(t)$ by the blue graph."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = sym.exp(-t) * sym.Heaviside(t)\n",
+    "x = rect(t-1/2)\n",
+    "\n",
+    "plot_signals(t, x, h, r'$h(t)$, $x(t)$', r'$t$')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The **first step** (identical to the approach above) is to substitute $t$ by $\\tau$ to yield $h(\\tau)$ and $x(\\tau)$. Note, the horizontal axis of the plot represents now $\\tau$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h1 = h.subs(t, tau)\n",
+    "x1 = x.subs(t, tau)\n",
+    "\n",
+    "plot_signals(tau, x1, h1, r'$h(\\tau)$, $x(\\tau)$', r'$\\tau$')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The **second step** is to shift $h(\\tau)$ to yield $h(\\tau-t)$, for the example $t=-2$ is chosen, thus $h(\\tau-t)$ is now **leading** compared to $h(\\tau)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h2 = h1.subs(tau, tau-t)\n",
+    "\n",
+    "plot_signals(tau, x1, h2.subs(t,-2), r'$h(\\tau-t)$, $x(\\tau)$', r'$\\tau$')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the **third** step we create $h(-(\\tau-t)) = h(t-\\tau)$, which is mirroring the signal $h(\\tau-t)$ along vertical axis at the value $t$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h3 = h1.subs(tau, -(tau-t))\n",
+    "\n",
+    "plot_signals(tau, x1, h3.subs(t,-2), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the **fourth step** the convolution integral is evaluated. In the example for $t=1$ the largest overlap area yields the convolution result $y(t=1) = 1-\\mathrm{e}^{-1} \\approx 0.63$, which is the maximum of $y(t)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# full overlap with largest area at t=1\n",
+    "plot_signals(tau, x1, h3.subs(t,1), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Repeat steps one to four for all $t$ to obtain $y(t)$, $y(t)$ is zero for all $t$ where no overlap occurs.\n",
+    "You might realize that only the 4th step must be repeatedly evaluated inserting a specific $t$. "
    ]
   },
   {
