--- a/systems_time_domain/convolution2.ipynb
+++ b/systems_time_domain/convolution2.ipynb
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the **third** step we create $h(-(\\tau-t)) = h(t-\\tau)$, which is mirroring the signal along vertical axis at the value $t$."
+    "In the **third** step we create $h(-(\\tau-t)) = h(t-\\tau)$, which is mirroring the signal $h(\\tau-t)$ along vertical axis at the value $t$."
    ]
   },
   {
@@ -235,8 +235,8 @@
     "\n",
     "1. $t<0$: no overlap\n",
     "2. $0 \\leq t < 1$: partial overlap (with increasing area)\n",
-    "3. $t = 1$: partial overlap (with largest area)\n",
-    "4. $1 < t < \\infty$: partial overlap (with decreasing area) "
+    "3. $t = 1$: full overlap (with largest area)\n",
+    "4. $1 < t < \\infty$: full overlap (with decreasing area) "
    ]
   },
   {
@@ -265,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# partial overlap: most overlap\n",
+    "# full overlap: largest area\n",
     "plot_signals(tau, x1, h3.subs(t,1), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
@@ -275,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# partial overlap\n",
+    "# full overlap\n",
     "plot_signals(tau, x1, h3.subs(t,2), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
@@ -285,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# partial overlap\n",
+    "# full overlap\n",
     "plot_signals(tau, x1, h3.subs(t,4), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
@@ -295,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# partial overlap\n",
+    "# fulll overlap\n",
     "plot_signals(tau, x1, h3.subs(t,6), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
@@ -345,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
