Minor editions in text, re-run examples, removed link

--- a/systems_time_domain/convolution.ipynb
+++ b/systems_time_domain/convolution.ipynb
@@ -331,21 +331,19 @@
    "source": [
     "### Alternative Graphical Representation\n",
     "\n",
-    "The **order** of mirroring and time shifting of $h(\\tau)$ can be **exchanged**. The algorithm is then performed with the following four steps:\n",
+    "The **order** of mirroring and time shifting of $h(\\tau)$ can be **exchanged**. The procedure is then performed as follows:\n",
     "\n",
-    "* 1. Substitute $t$ by $\\tau$ in both $x(t)$ and $h(t)$, yielding $x(\\tau)$ and $h(\\tau)$ over $\\tau$, i.e. signals are the same only defined over time variable $\\tau$.\n",
+    "* 1. Substitute $t$ by $\\tau$ in both $x(t)$ and $h(t)$, yielding $x(\\tau)$ and $h(\\tau)$ over $\\tau$\n",
     "\n",
-    "* 2. Shift $h(\\tau)$ by $t$ to yield $h(\\tau-t)$, **delayed** for $t>0$, **leading** for $t<0$ as discussed in the continuous signal operations notebook.\n",
+    "* 2. Shift $h(\\tau)$ by $t$ to yield $h(\\tau-t)$, **delayed** for $t>0$, **leading** for $t<0$\n",
     "\n",
-    "* 3. Create $h(-(\\tau-t)) = h(t-\\tau)$, which is mirroring the signal along vertical axis at the value $t$.\n",
+    "* 3. Create $h(-(\\tau-t)) = h(t-\\tau)$, mirroring the signal along vertical axis at the value $t$\n",
     "\n",
-    "* 4. Calculate the convolution integral for all overlapping sections of $x(\\tau)$ and $h(t-\\tau)$. This yields the specific convolution result at specified $t$.\n",
+    "* 4. Calculate the convolution integral for all overlapping regions of $x(\\tau)$ and $h(t-\\tau)$, yielding the convolution result for a specific $t$\n",
     "\n",
-    "Perform 1st to 4th step for all $t$ - at least for all $t$ where overlapping occurs in the 4th step - to obtain the full convolution result.\n",
+    "Perform 1st to 4th step for all $t$ - at least for all $t$ where overlapping occurs in the 4th step - to obtain the result.\n",
     "\n",
-    "The graphical interpretation of these operations is illustrated in the remainder by the same example as above.\n",
-    "\n",
-    "In the following, the impulse response $h(t)$ is illustrated by the red graph and the input signal $x(t)$ by the blue graph."
+    "The graphical interpretation of these operations is illustrated in the remainder by the same example as above. The impulse response $h(t)$ is illustrated by the red graph and the input signal $x(t)$ by the blue graph."
    ]
   },
   {
@@ -428,7 +426,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# full overlap with largest area at t=1\n",
     "plot_signals(tau, x1, h3.subs(t,1), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
@@ -436,8 +433,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Repeat steps one to four for all $t$ to obtain $y(t)$, $y(t)$ is zero for all $t$ where no overlap occurs.\n",
-    "You might realize that only the 4th step must be repeatedly evaluated inserting a specific $t$. "
+    "Repeat steps one to four for all $t$ to obtain $y(t)$. $y(t)$ is zero for all $t$ where no overlap occurs.\n",
+    "You might realize that only the 4th step must be repeatedly evaluated inserting a specific $t$."
    ]
   },
   {
@@ -468,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
