--- a/systems_time_domain/convolution_animated.ipynb
+++ b/systems_time_domain/convolution_animated.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "    lines = [ax[0].plot([], [], lw=2, label=r'$h(t-\\tau)$')[0]]\n",
     "    lines.append(ax[0].plot([], [], lw=2, label=r'$x(\\tau)$')[0])\n",
-    "    lines.append(ax[1].plot([], [], lw=2, label=r'$y(t)$')[0])\n",
+    "    lines.append(ax[1].plot([], [], 'g-', lw=2, label=r'$y(t) = x(t) * h(t)$')[0])\n",
     "    lines.append(ax[1].plot([], [], 'ro', lw=2)[0])\n",
     "\n",
     "    ax[0].set_xlim((-3, 5))\n",
@@ -60,10 +60,13 @@
     "\n",
     "        lines[2].set_data(taud, y_eval(taud))\n",
     "        lines[3].set_data(ti, y_eval(ti))\n",
+    "        \n",
+    "        ax[0].collections.clear()\n",
+    "        ax[0].fill_between(taud, 0, h_eval(ti, taud)*x_eval(taud), facecolor='green', alpha=0.5)\n",
     "\n",
     "        return lines\n",
     "\n",
-    "    return animation.FuncAnimation(fig, animate, td, interval=30, blit=True)"
+    "    return animation.FuncAnimation(fig, animate, td, interval=50, blit=True)"
    ]
   },
   {
