More consistent colors

--- a/systems_time_domain/convolution_animated.ipynb
+++ b/systems_time_domain/convolution_animated.ipynb
@@ -61,7 +61,7 @@
     "        lines[3].set_data(ti, y_eval(ti))\n",
     "        \n",
     "        ax[0].collections.clear()\n",
-    "        ax[0].fill_between(taud, 0, h_eval(ti, taud)*x_eval(taud), facecolor='green', alpha=0.5)\n",
+    "        ax[0].fill_between(taud, 0, h_eval(ti, taud)*x_eval(taud), facecolor='red', alpha=0.5)\n",
     "\n",
     "        return lines\n",
     "\n",
