Added animation example to convolution notebook, improved plotting style

--- a/systems_time_domain/convolution.ipynb
+++ b/systems_time_domain/convolution.ipynb
@@ -146,8 +146,8 @@
    "source": [
     "def plot_signals(x_axis, x, h, ylabel, xlabel):\n",
     "    p1 = sym.plot(x, (x_axis, -5, 5), show=False,\n",
-    "                  line_color='b', ylabel=ylabel, xlabel=xlabel)\n",
-    "    p2 = sym.plot(h, (x_axis, -5, 5), show=False, line_color='r')\n",
+    "                  line_color='C1', ylabel=ylabel, xlabel=xlabel)\n",
+    "    p2 = sym.plot(h, (x_axis, -5, 5), show=False, line_color='C0')\n",
     "    p1.extend(p2)\n",
     "    p1.show()"
    ]
@@ -156,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now lets define and plot the signals. In the following, the impulse response $h(t)$ is illustrated by the red graph and the input signal $x(t)$ by the blue graph."
+    "Now lets define and plot the signals. In the following, the impulse response $h(t)$ is illustrated by the blue graph and the input signal $x(t)$ by the orange graph."
    ]
   },
   {
@@ -310,9 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The overall result is composed from the three individual results. \n",
-    "\n",
-    "As alternative and in order to plot the result, the convolution integral is evaluated in `SymPy`"
+    "The overall result is composed from the three individual results. As alternative and in order to plot the result, the convolution integral is evaluated in `SymPy`"
    ]
   },
   {
@@ -322,14 +320,36 @@
    "outputs": [],
    "source": [
     "y = sym.integrate(h.subs(t,t-tau) * x.subs(t, tau), (tau, 0, t))\n",
-    "sym.plot(y, (t,0,6), ylabel=r'$y(t)$');"
+    "sym.plot(y, (t,0,6), ylabel=r'$y(t)$', line_color='g');"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Alternative Graphical Representation\n",
+    "The entire process is illustrated in the following animation. The upper plot shows the integrands $h(t-\\tau)$ and $x(\\tau)$ of the convolution integral, the lower plot the result $y(t) = x(t) * h(t)$ of the convolution. The red dot in the lower plot indicates the particular time instant $t$ for which the result of the convolution is computed. The filled red area in the upper plot illustrates the area below $x(\\tau) \\cdot h(t-\\tau)$ for the same time instant. The area constitutes the result of the convolution integral. The time $t$ is varied in the animation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from animation import animate_convolution\n",
+    "plt.rcParams['animation.html'] = 'jshtml'\n",
+    "\n",
+    "anim = animate_convolution(x, 2*h, y, t, tau, np.arange(-2, 5, .1), np.arange(-5, 5, 0.02))\n",
+    "anim"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Alternative Graphical Interpretation\n",
     "\n",
     "The **order** of mirroring and time shifting of $h(\\tau)$ can be **exchanged**. The procedure is then performed as follows:\n",
     "\n",
