Fixed amplitude for animation

--- a/systems_time_domain/convolution.ipynb
+++ b/systems_time_domain/convolution.ipynb
@@ -341,7 +341,7 @@
     "from animation import animate_convolution\n",
     "plt.rcParams['animation.html'] = 'jshtml'\n",
     "\n",
-    "anim = animate_convolution(x, 2*h, y, t, tau, np.arange(-2, 5, .1), np.arange(-5, 5, 0.02))\n",
+    "anim = animate_convolution(x, h, y, t, tau, np.arange(-2, 5, .1), np.arange(-5, 5, 0.02))\n",
     "anim"
    ]
   },
