Revised implementation of animation to use sympy directly, modified signal, minor edits of text

--- a/systems_time_domain/convolution.ipynb
+++ b/systems_time_domain/convolution.ipynb
@@ -91,9 +91,9 @@
     "\n",
     "3. shift $h(-\\tau)$ by $t$ to the right to yield $h(t - \\tau)$,\n",
     "\n",
-    "4. shift $h(t - \\tau)$ throughout $t = -\\infty \\dots \\infty$, check if it overlaps with $x(\\tau)$ and calculate the convolution integral for the overlapping sections.\n",
+    "4. shift $h(t - \\tau)$ throughout $t = -\\infty \\dots \\infty$, check if it overlaps with $x(\\tau)$.\n",
     "\n",
-    "The graphical interpretation of these operations is illustrated in the remainder by an example. "
+    "Steps 3 and 4 are evaluated for each time-instant $t$ in order to calculate the convolution integral for the overlapping sections. The graphical interpretation of the convolution is illustrated in the remainder at an example."
    ]
   },
   {
@@ -106,7 +106,7 @@
     "\n",
     "\\begin{align}\n",
     "h(t) &= e^{-t} \\\\\n",
-    "x(t) &= \\text{rect} \\left(t - \\frac{1}{2}\\right)\n",
+    "x(t) &= \\frac{3}{4} \\cdot \\text{rect} \\left(t - \\frac{1}{2}\\right)\n",
     "\\end{align}\n",
     "\n",
     "Before proceeding, helper functions for the rectangular signal and plotting of the signals are defined"
@@ -166,7 +166,7 @@
    "outputs": [],
    "source": [
     "h = sym.exp(-t) * sym.Heaviside(t)\n",
-    "x = rect(t - 1/2)\n",
+    "x = sym.Rational(3, 4) * rect(t - 1/2)\n",
     "\n",
     "plot_signals(t, x, h, r'$h(t)$, $x(t)$', r'$t$')"
    ]
